elliptic/istio/virtualservice_gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: caddi-cmd-gateway
  namespace: istio-ingress
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "caddi.cmd.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE # or PASSTHROUGH for sni pass-through
      credentialName: caddi-tls-credential # K8s secret containing your SSL certificate
    hosts:
    - "caddi.cmd.com"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: caddi-cmd-route
spec:
  hosts:
  - "caddi.cmd.com"
  gateways:
  - istio-ingress/caddi-cmd-gateway
  http:
  - match:
    - uri:
        prefix: /caddi-cmd
    route:
    - destination:
        host: "caddi-cmd-service.caddi.svc.cluster.local"
        port:
          number: 8080
